# nsgym-solution

./: .gitignore  LICENSE  README.md  docker-compose.yml  evaluator.py  example_submission.py  main.py  pyproject.toml  submission.py
baseline_algorithm_script_runners/: README.md  mcts_example.py  ppo_example.py  sac_example.py
config/: config.yaml  config_ant.yaml  config_cartpole.yaml  config_frozenlake.yaml
config/agent/: ppo.yaml
config/env/: ant.yaml  cartpole.yaml  frozenlake.yaml
config/hparam/: accel_mutation.yaml  plr_sampling.yaml  temperature.yaml
docker/: base.Dockerfile  eval.Dockerfile
eval/: README.md  eval_ant.py  eval_cartpole.py  eval_frozenlake.py  plot_ant_rewards.py  plot_reward_traces.py  result_bundle.py
models/ppo_ant/: ppo_ant_vecnormalize.pkl  ppo_final.pt
models/ppo_cartpole/: ppo_final.pt
models/ppo_frozenlake/: ppo_final_full_notify.pt  ppo_final_no_notify.pt  ppo_final_no_notify_random_ip.pt
notebooks/: hparam_results.ipynb
scripts/: benchmark_frozenlake_wrapper.py  benchmark_ns_wrappers.py  benchmark_plr_cartpole.py  benchmark_plr_torchrl.py  benchmark_threading.py  eval_random_baseline.py  hparam_search.py  plot_learning_curves.py  profile_evaluator.py  profile_inference_stages.py  run_ant_disco_ablation.sh  run_ant_hidden_size_sweep.sh  train.py
src/AAMAS_Comp/: __init__.py  agent.py  base_agent.py
src/AAMAS_Comp/agents/: __init__.py  networks.py  ppo.py
src/AAMAS_Comp/curriculum/: __init__.py  plr.py  plr_env.py
tests/: conftest.py  test_env_diversity.py  test_env_stability.py  test_interface.py
(+18 files in other folders)
