[project]
name = "ns-gym-comp-template"
version = "0.1.0"
description = "NS-Gym Competition Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jax>=0.8.2",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "ns-gym>=1.0.8",
    "pytest>=9.0.2",
    "torch>=2.9.1",
    "wandb>=0.24.0",
]
