[project]
name = "ns-gym-comp-template"
version = "0.1.0"
description = "NS-Gym Competition Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "ns-gym>=1.0.10",
    "omegaconf>=2.3.0",
    "optuna>=4.8.0",
    "pytest>=9.0.2",
    "torch>=2.9.1",
    "torchrl[utils]>=0.11.1",
    "wandb>=0.24.0",
]
